# simple-template-math

./: .gitignore  CMakeLists.txt
docs/: README.md
include/: AABB3D.hpp  EulerAngle.hpp  Line.hpp  LineVolume.hpp  Math.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Plane.hpp  PlaneVolume.hpp  Quaternion.hpp  Ray.hpp  Sphere.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
simple-template-math/: simple-template-math.sln
simple-template-math/simple-template-math/: simple-template-math.vcxproj  simple-template-math.vcxproj.filters
simple-template-math/simple-template-math/Math/: Math.cpp  Math.h  Matrix3x3.h  Matrix4x4.h  Quaternion.cpp  Quaternion.h  UID.cpp  UID.h  Vector2.h  Vector3.h  Vector4.h
simple-template-math/simple-template-math/Math/Geometry/: AABB3D.h  Line.h  LineVolme.h  Plane.h  PlaneVolume.h  Ray.h  SimpleList.h  Sphere.h
simple-template-math/simple-template-math/Math/Transform/: Transform.cpp  Transform.h
src/: Math.cpp  Quaternion.cpp  Transform.cpp
tests/: CMakeLists.txt  test_main.cpp
